# tauri-temrinal-template

./: .gitignore  README.md  TEMPLATE.md  index.html  package-lock.json  package.json  vite.config.js
scripts/: init-project.sh
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: git_cache.rs  lib.rs  main.rs  state.rs
src-tauri/src/fs/: commands.rs  cwd.rs  directory.rs  git.rs  mod.rs
src-tauri/src/pty/: commands.rs  manager.rs  mod.rs
src/components/: CliSelectionModal.jsx  EmptyState.jsx  FlatViewMenu.jsx  KeyboardShortcutsDialog.jsx  Layout.jsx  LeftSidebar.jsx  SidebarHeader.jsx  StatusBar.jsx  Terminal.jsx  ThemeSwitcher.jsx  TitleBar.jsx  ToastContainer.jsx
src/components/file-tree/: EmptyState.jsx  FileNode.jsx  FileTree.jsx  FolderNode.jsx  GitStatsBadge.jsx  TreeNode.jsx  TypeCheckBadge.jsx  constants.js
src/components/textarea-panel/: ActionButtons.jsx  TextareaPanel.jsx  textarea-panel.js
src/components/ui/: DateRangePicker.jsx  RetroSpinner.jsx  badge.jsx  button.jsx  card.jsx  checkbox.jsx  dialog.jsx  dropdown-menu.jsx  input.jsx  sidebar.jsx  (+3 more)
src/contexts/: FileSelectionContext.jsx  ThemeContext.jsx  ToastContext.jsx
src/hooks/: useBranchName.js  useCliLauncher.js  useCwdMonitor.js  useDialogs.js  useFileSearch.js  useFlatViewNavigation.js  useHelpShortcut.js  useHiddenPty.js  useSidebar.js  useSidebarSearch.js  useTerminal.js  useTerminalSettings.js  useTextareaShortcuts.js  useTreeView.js  useViewModeShortcuts.js
src/themes/: theme-config.js
src/utils/: pathUtils.js  treeOperations.js
(+2 files in other folders)
