[package]
name = "tauri-terminal-template"
version = "0.1.0"
description = "A terminal template built with Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_terminal_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
notify = "6.1"

[target.'cfg(any(windows, target_os = "macos"))'.dependencies]
sysinfo = "0.33"
